--- a/index.html
+++ b/index.html
@@ -372,7 +372,7 @@
                         </div>
                         <div class="tab-item portfolio-item">
                             <div class="work-img">
-                                <img src="small two.png" alt="">
+                                <img src="small-two.png" alt="">
                             </div>
                             <div class="work-info">
                                 <h4>Fullstack Project</h4>
